// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useReactRedux should apply a hook for useDispatch: dispatch 1`] = `
[
  [
    {
      "data": "ipsum",
      "type": "lorem",
    },
  ],
]
`;

exports[`useReactRedux should apply hooks for aggregating multiple selector responses: aggregated calls, useSelectors, All Response 1`] = `
{
  "cancelledCancelled": {
    "cancelled": true,
    "data": [
      {
        "cancelled": true,
      },
      {
        "cancelled": true,
      },
    ],
    "error": false,
    "fulfilled": false,
    "message": [Error: Cancelled useSelectorsResponse],
    "pending": false,
    "responses": {
      "id": {},
      "list": [
        {
          "cancelled": true,
        },
        {
          "cancelled": true,
        },
      ],
    },
  },
  "cancelledCancelledById": {
    "cancelled": true,
    "data": {
      "ipsum": {
        "cancelled": true,
        "id": "ipsum",
      },
      "lorem": {
        "cancelled": true,
        "id": "lorem",
      },
    },
    "error": false,
    "fulfilled": false,
    "message": [Error: Cancelled useSelectorsResponse],
    "pending": false,
    "responses": {
      "id": {
        "ipsum": {
          "cancelled": true,
          "id": "ipsum",
        },
        "lorem": {
          "cancelled": true,
          "id": "lorem",
        },
      },
      "list": [
        {
          "cancelled": true,
          "id": "lorem",
        },
        {
          "cancelled": true,
          "id": "ipsum",
        },
      ],
    },
  },
  "errorCancelled": {
    "cancelled": false,
    "data": [
      {
        "error": true,
      },
    ],
    "error": true,
    "fulfilled": false,
    "message": [Error: useSelectorsResponse, {"error":true}],
    "pending": false,
    "responses": {
      "id": {},
      "list": [
        {
          "cancelled": true,
        },
        {
          "error": true,
        },
      ],
    },
  },
  "errorError": {
    "cancelled": false,
    "data": [
      {
        "error": true,
      },
      {
        "error": true,
      },
    ],
    "error": true,
    "fulfilled": false,
    "message": [Error: useSelectorsResponse, {"error":true}],
    "pending": false,
    "responses": {
      "id": {},
      "list": [
        {
          "error": true,
        },
        {
          "error": true,
        },
      ],
    },
  },
  "errorErrorById": {
    "cancelled": false,
    "data": {
      "ipsum": {
        "error": true,
        "id": "ipsum",
      },
      "lorem": {
        "error": true,
        "id": "lorem",
      },
    },
    "error": true,
    "fulfilled": false,
    "message": [Error: useSelectorsResponse, {"error":true,"id":"lorem"}],
    "pending": false,
    "responses": {
      "id": {
        "ipsum": {
          "error": true,
          "id": "ipsum",
        },
        "lorem": {
          "error": true,
          "id": "lorem",
        },
      },
      "list": [
        {
          "error": true,
          "id": "lorem",
        },
        {
          "error": true,
          "id": "ipsum",
        },
      ],
    },
  },
  "fulfilledCancelled": {
    "cancelled": false,
    "data": [
      {
        "fulfilled": true,
      },
      {
        "cancelled": true,
      },
    ],
    "error": false,
    "fulfilled": true,
    "message": null,
    "pending": false,
    "responses": {
      "id": {},
      "list": [
        {
          "fulfilled": true,
        },
        {
          "cancelled": true,
        },
      ],
    },
  },
  "fulfilledError": {
    "cancelled": false,
    "data": [
      {
        "error": true,
      },
    ],
    "error": true,
    "fulfilled": false,
    "message": [Error: useSelectorsResponse, {"error":true}],
    "pending": false,
    "responses": {
      "id": {},
      "list": [
        {
          "fulfilled": true,
        },
        {
          "error": true,
        },
      ],
    },
  },
  "fulfilledFulfilled": {
    "cancelled": false,
    "data": [
      {
        "fulfilled": true,
      },
      {
        "fulfilled": true,
      },
    ],
    "error": false,
    "fulfilled": true,
    "message": null,
    "pending": false,
    "responses": {
      "id": {},
      "list": [
        {
          "fulfilled": true,
        },
        {
          "fulfilled": true,
        },
      ],
    },
  },
  "fulfilledFulfilledById": {
    "cancelled": false,
    "data": {
      "ipsum": {
        "fulfilled": true,
        "id": "ipsum",
      },
      "lorem": {
        "fulfilled": true,
        "id": "lorem",
      },
    },
    "error": false,
    "fulfilled": true,
    "message": null,
    "pending": false,
    "responses": {
      "id": {
        "ipsum": {
          "fulfilled": true,
          "id": "ipsum",
        },
        "lorem": {
          "fulfilled": true,
          "id": "lorem",
        },
      },
      "list": [
        {
          "fulfilled": true,
          "id": "lorem",
        },
        {
          "fulfilled": true,
          "id": "ipsum",
        },
      ],
    },
  },
  "fulfilledPending": {
    "cancelled": false,
    "data": [],
    "error": false,
    "fulfilled": false,
    "message": null,
    "pending": true,
    "responses": {
      "id": {},
      "list": [
        {
          "fulfilled": true,
        },
        {
          "pending": true,
        },
      ],
    },
  },
  "pendingCancelled": {
    "cancelled": false,
    "data": [],
    "error": false,
    "fulfilled": false,
    "message": null,
    "pending": true,
    "responses": {
      "id": {},
      "list": [
        {
          "pending": true,
        },
        {
          "cancelled": true,
        },
      ],
    },
  },
  "pendingError": {
    "cancelled": false,
    "data": [
      {
        "error": true,
      },
    ],
    "error": true,
    "fulfilled": false,
    "message": [Error: useSelectorsResponse, {"error":true}],
    "pending": false,
    "responses": {
      "id": {},
      "list": [
        {
          "pending": true,
        },
        {
          "error": true,
        },
      ],
    },
  },
  "pendingPending": {
    "cancelled": false,
    "data": [],
    "error": false,
    "fulfilled": false,
    "message": null,
    "pending": true,
    "responses": {
      "id": {},
      "list": [
        {
          "pending": true,
        },
        {
          "pending": true,
        },
      ],
    },
  },
  "pendingPendingById": {
    "cancelled": false,
    "data": {},
    "error": false,
    "fulfilled": false,
    "message": null,
    "pending": true,
    "responses": {
      "id": {
        "ipsum": {
          "id": "ipsum",
          "pending": true,
        },
        "lorem": {
          "id": "lorem",
          "pending": true,
        },
      },
      "list": [
        {
          "id": "lorem",
          "pending": true,
        },
        {
          "id": "ipsum",
          "pending": true,
        },
      ],
    },
  },
}
`;

exports[`useReactRedux should apply hooks for aggregating multiple selector responses: aggregated calls, useSelectorsAllSettledResponse 1`] = `
{
  "cancelledCancelled": {
    "data": [
      {
        "cancelled": true,
      },
      {
        "cancelled": true,
      },
    ],
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "cancelledCancelledById": {
    "data": {
      "ipsum": {
        "cancelled": true,
      },
      "lorem": {
        "cancelled": true,
      },
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "errorCancelled": {
    "data": [
      {
        "error": true,
      },
      {
        "cancelled": true,
      },
    ],
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "errorError": {
    "data": [
      {
        "error": true,
      },
      {
        "error": true,
      },
    ],
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "errorErrorById": {
    "data": [
      {
        "error": true,
        "id": "lorem",
      },
      {
        "error": true,
        "id": "ipsum",
      },
    ],
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledCancelled": {
    "data": [
      {
        "fulfilled": true,
      },
      {
        "cancelled": true,
      },
    ],
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledError": {
    "data": [
      {
        "fulfilled": true,
      },
      {
        "error": true,
      },
    ],
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledFulfilled": {
    "data": [
      {
        "fulfilled": true,
      },
      {
        "fulfilled": true,
      },
    ],
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledFulfilledById": {
    "data": {
      "ipsum": {
        "fulfilled": true,
      },
      "lorem": {
        "fulfilled": true,
      },
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledPending": {
    "lorem": "ipsum",
    "pending": true,
  },
  "pendingCancelled": {
    "lorem": "ipsum",
    "pending": true,
  },
  "pendingError": {
    "lorem": "ipsum",
    "pending": true,
  },
  "pendingPending": {
    "lorem": "ipsum",
    "pending": true,
  },
  "pendingPendingById": {
    "lorem": "ipsum",
    "pending": true,
  },
}
`;

exports[`useReactRedux should apply hooks for aggregating multiple selector responses: aggregated calls, useSelectorsAnyResponse 1`] = `
{
  "cancelledCancelled": {
    "cancelled": true,
    "data": [
      {
        "cancelled": true,
      },
      {
        "cancelled": true,
      },
    ],
    "lorem": "ipsum",
    "message": [Error: Cancelled useSelectorsAnyResponse],
  },
  "cancelledCancelledById": {
    "cancelled": true,
    "data": {
      "ipsum": {
        "cancelled": true,
      },
      "lorem": {
        "cancelled": true,
      },
    },
    "lorem": "ipsum",
    "message": [Error: Cancelled useSelectorsAnyResponse],
  },
  "errorCancelled": {
    "data": [
      {
        "error": true,
      },
    ],
    "error": true,
    "lorem": "ipsum",
    "message": [AggregateError: useSelectorsAnyResponse],
  },
  "errorError": {
    "data": [
      {
        "error": true,
      },
      {
        "error": true,
      },
    ],
    "error": true,
    "lorem": "ipsum",
    "message": [AggregateError: useSelectorsAnyResponse],
  },
  "errorErrorById": {
    "data": [
      {
        "error": true,
        "id": "lorem",
      },
      {
        "error": true,
        "id": "ipsum",
      },
    ],
    "error": true,
    "lorem": "ipsum",
    "message": [AggregateError: useSelectorsAnyResponse],
  },
  "fulfilledCancelled": {
    "data": {
      "fulfilled": true,
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledError": {
    "data": {
      "fulfilled": true,
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledFulfilled": {
    "data": {
      "fulfilled": true,
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledFulfilledById": {
    "data": {
      "fulfilled": true,
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledPending": {
    "data": {
      "fulfilled": true,
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "pendingCancelled": {
    "lorem": "ipsum",
    "pending": true,
  },
  "pendingError": {
    "lorem": "ipsum",
    "pending": true,
  },
  "pendingPending": {
    "lorem": "ipsum",
    "pending": true,
  },
  "pendingPendingById": {
    "lorem": "ipsum",
    "pending": true,
  },
}
`;

exports[`useReactRedux should apply hooks for aggregating multiple selector responses: aggregated calls, useSelectorsRaceResponse 1`] = `
{
  "cancelledCancelled": {
    "cancelled": true,
    "data": {
      "cancelled": true,
    },
    "lorem": "ipsum",
    "message": [Error: Cancelled useSelectorsRaceResponse],
  },
  "cancelledCancelledById": {
    "cancelled": true,
    "data": {
      "cancelled": true,
    },
    "lorem": "ipsum",
    "message": [Error: Cancelled useSelectorsRaceResponse],
  },
  "errorCancelled": {
    "data": {
      "error": true,
    },
    "error": true,
    "lorem": "ipsum",
    "message": [Error: useSelectorsRaceResponse, {"error":true}],
  },
  "errorError": {
    "data": {
      "error": true,
    },
    "error": true,
    "lorem": "ipsum",
    "message": [Error: useSelectorsRaceResponse, {"error":true}],
  },
  "errorErrorById": {
    "data": {
      "error": true,
      "id": "lorem",
    },
    "error": true,
    "lorem": "ipsum",
    "message": [Error: useSelectorsRaceResponse, {"id":"lorem","error":true}],
  },
  "fulfilledCancelled": {
    "data": {
      "fulfilled": true,
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledError": {
    "data": {
      "fulfilled": true,
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledFulfilled": {
    "data": {
      "fulfilled": true,
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledFulfilledById": {
    "data": {
      "fulfilled": true,
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "fulfilledPending": {
    "data": {
      "fulfilled": true,
    },
    "fulfilled": true,
    "lorem": "ipsum",
  },
  "pendingCancelled": {
    "lorem": "ipsum",
    "pending": true,
  },
  "pendingError": {
    "data": {
      "error": true,
    },
    "error": true,
    "lorem": "ipsum",
    "message": [Error: useSelectorsRaceResponse, {"error":true}],
  },
  "pendingPending": {
    "lorem": "ipsum",
    "pending": true,
  },
  "pendingPendingById": {
    "lorem": "ipsum",
    "pending": true,
  },
}
`;

exports[`useReactRedux should return a list or object with ID for multiple selectors with useSelectors: list and object 1`] = `
{
  "list": [
    "dolor",
    "sit",
  ],
  "object": {
    "hello": "dolor",
    "world": "sit",
  },
}
`;

exports[`useReactRedux should return specific properties: specific properties 1`] = `
{
  "shallowEqual": [Function],
  "useDispatch": [Function],
  "useSelector": [Function],
  "useSelectors": [Function],
  "useSelectorsAllSettledResponse": [Function],
  "useSelectorsAnyResponse": [Function],
  "useSelectorsRaceResponse": [Function],
  "useSelectorsResponse": [Function],
}
`;
